kubernetes/spack/cdash-spack-io/web/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdash
  namespace: spack
  labels:
    app: cdash
    svc: web
spec:
  selector:
    matchLabels:
      app: cdash
      svc: web
  replicas: 1
  template:
    metadata:
      labels:
        app: cdash
        svc: web
    spec:
      restartPolicy: Always
      containers:
      - name: cdash
        command: ["/bin/bash", "-c"]
        args:
          - >
            eval 'CDASH_CONFIG="$(CDASH_CONFIG_TEMPLATE)"' ;
            export CDASH_CONFIG ;
            exec /bin/bash /docker-entrypoint.sh
        image: "kitware/cdash"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
      nodeSelector:
        "beta.kubernetes.io/instance-type": "t2.medium"
